syntax="proto3";
package com.example.greeting_service;
option java_multiple_files = true;
option java_package = "com.example.greeting_service";
option java_outer_classname = "GreetingProto";

service GreetingService {
  rpc Greet (GreetingRequest) returns (GreetingResponse);
}
message GreetingRequest {
  string name = 1;
}
message GreetingResponse {
  string message = 1;
}
